--- a/app/sample/skrip.yaml
+++ b/app/sample/skrip.yaml
@@ -1,47 +1,73 @@
-packagePath: bitbucket.org/kfc/loyaltyengine
+packagePath: bitbucket.org/kfc/loyaltyengine2
 
-domains:
-- name: point
-  usecases:
-  - name: addingpoint
-    outports:
-    - name: IsUserAlreadyHasPointBalance
-      requestFields:
-      - name: UserID
-        dataType: string
-      responseFields:
-      - name: YesItHas
-        dataType: bool      
+usecases:
+- name: InitPoint
+  inport:
+    requestFields:
+    - name: UserID
+      dataType: string
+    - name: CurrentPoint
+      dataType: int
+    responseFields:
+    - name: PointBalanceID
+      dataType: string 
+  outports:
+  - name: IsUserAlreadyHasPointBalance
+    requestFields:
+    - name: UserID
+      dataType: string
+    responseFields:
+    - name: YesItHas
+      dataType: bool
 
-    - name: SetPointBalanceForUser
-      requestFields:
-      - name: UserID
-        dataType: string    
-      - name: Point
-        dataType: string 
-      - name: PointBalance
-        dataType: string    
-      - name: EventState
-        dataType: string
-      - name: ExtendInfo
-        dataType: string
-      responseFields:
-      - name: PointBalanceID
-        dataType: string       
+  - name: SetPointBalanceForUser
+    requestFields:
+    - name: UserID
+      dataType: string
+    - name: Point
+      dataType: string 
+    - name: PointBalance
+      dataType: string
+    - name: EventState
+      dataType: string
+    - name: ExtendInfo
+      dataType: string
+    responseFields:
+    - name: PointBalanceID
+      dataType: string
 
-    - name: GetGlobalInitialPoint
-      requestFields:
-      responseFields:
-      - name: Point
-        dataType: int
-    
-    inports:
-      requestFields:
-      - name: UserID
-        dataType: string  
-      - name: CurrentPoint
-        dataType: int            
-      responseFields:
-      - name: PointBalanceID
-        dataType: string      
+- name: CompleteOrder
+  inport:
+    requestFields:
+    - name: UserID
+      dataType: string
+    - name: CurrentPoint
+      dataType: int
+    responseFields:
+    - name: PointBalanceID
+      dataType: string 
+  outports:
+  - name: IsUserAlreadyHasPointBalance
+    requestFields:
+    - name: UserID
+      dataType: string
+    responseFields:
+    - name: YesItHas
+      dataType: bool
+
+  - name: SetPointBalanceForUser
+    requestFields:
+    - name: UserID
+      dataType: string
+    - name: Point
+      dataType: string 
+    - name: PointBalance
+      dataType: string
+    - name: EventState
+      dataType: string
+    - name: ExtendInfo
+      dataType: string
+    responseFields:
+    - name: PointBalanceID
+      dataType: string      
 
