--- a/app/sample/skrip.yaml
+++ b/app/sample/skrip.yaml
@@ -1,26 +1,34 @@
 packagePath: bitbucket.org/kfc/loyaltyengine2
 
 usecases:
+
+#----------------------------
 - name: InitPoint
-  inport:
+  #----INPORT--------
+  inport: 
+    #----REQ--------
     requestFields:
     - name: UserID
       dataType: string
     - name: CurrentPoint
       dataType: int
+    #----RES--------      
     responseFields:
     - name: PointBalanceID
-      dataType: string 
+      dataType: string
+  #----OUTPORT-------- 
   outports:
   - name: IsUserAlreadyHasPointBalance
+    #----REQUEST--------  
     requestFields:
     - name: UserID
       dataType: string
+    #----RESPONSE--------
     responseFields:
     - name: YesItHas
       dataType: bool
-
   - name: SetPointBalanceForUser
+    #----REQUEST--------
     requestFields:
     - name: UserID
       dataType: string
@@ -32,11 +40,14 @@ usecases:
       dataType: string
     - name: ExtendInfo
       dataType: string
+    #----RESPONSE--------
     responseFields:
     - name: PointBalanceID
       dataType: string
 
+#----------------------------      
 - name: CompleteOrder
+  #----INPORT--------
   inport:
     requestFields:
     - name: UserID
@@ -45,7 +56,8 @@ usecases:
       dataType: int
     responseFields:
     - name: PointBalanceID
-      dataType: string 
+      dataType: string
+  #----OUTPORT--------       
   outports:
   - name: IsUserAlreadyHasPointBalance
     requestFields:
@@ -54,7 +66,6 @@ usecases:
     responseFields:
     - name: YesItHas
       dataType: bool
-
   - name: SetPointBalanceForUser
     requestFields:
     - name: UserID
